# hamcrest2-rust

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: core.rs  lib.rs
src/matchers/: all.rs  all_of.rs  any.rs  any_of.rs  anything.rs  boolean.rs  close_to.rs  compared_to.rs  contains.rs  empty.rs  equal_to.rs  err.rs  existing_path.rs  has.rs  is.rs  len.rs  mod.rs  none.rs  of_len.rs  ok.rs  path_exists.rs  regex.rs  some.rs  type_of.rs  vecs.rs
tests/: all.rs  all_of.rs  any.rs  any_of.rs  anything.rs  boolean.rs  close_to.rs  compared_to.rs  contain.rs  contains.rs  empty.rs  equal_to.rs  err.rs  existing_path.rs  has.rs  len.rs  none.rs  of_len.rs  ok.rs  path_exists.rs  regex.rs  some.rs  type_of.rs  vecs.rs
