[project]
name = "hamcrest2"
description = "A port of the Hamcrest testing library"
version = "0.1.6"
keywords = ["unit", "matcher", "testing", "assertions", "tdd"]
categories = ["development-tools", "development-tools::testing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Valloric/hamcrest2-rust"
documentation = "https://docs.rs/hamcrest2"
readme = "README.md"
authors = [
  "Val Markovic <val@markovic.io>",
  "Carl Lerche <me@carllerche.com>",
  "Alex Crichton <alex@alexcrichton.com>",
  "Ben Longbons <b.r.longbons@gmail.com>",
  "Graham Dennis <graham.dennis@gmail.com>",
  "Michael Gehring <mg@ebfe.org>",
  "Oliver Mader <b52@reaktor42.de>",
  "Robin Gloster <robin@loc-com.de>",
  "Steve Klabnik <steve@steveklabnik.com>",
  "Tamir Duberstein <tamird@gmail.com>",
  "Thiago Pontes <thiagopnts@gmail.com>",
  "Urban Hafner <contact@urbanhafner.com>",
  "Valerii Hiora <valerii.hiora@gmail.com>",
  "Yehuda Katz <wycats@gmail.com>",
  "Ian Létourneau <letourneau.ian@gmail.com>",
  "Matt LaChance <mattlach@umich.edu>",
  "Flier Lu <flier.lu@gmail.com>",
  "Povilas Balciunas <balciunas90@gmail.com>",
]

[dependencies]
num = "0.1.*"
regex = "1.*"
